--- a/TowerDefense/TowerDefense.csproj
+++ b/TowerDefense/TowerDefense.csproj
@@ -35,8 +35,11 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Enemies\Bird.cs" />
+    <Compile Include="Enemies\Boss.cs" />
+    <Compile Include="Enemies\Spider.cs" />
     <Compile Include="Towers\Bullet.cs" />
-    <Compile Include="Enemy.cs" />
+    <Compile Include="Enemies\Enemy.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Towers\CannonTower.cs" />
     <Compile Include="GUI\Button.cs" />
@@ -74,6 +77,12 @@
   <ItemGroup>
     <Content Include="..\..\..\..\..\..\..\Program Files %28x86%29\MonoGame\v3.0\Assemblies\WindowsGL\SDL.dll">
       <Link>SDL.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\birdmove.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\bossmove.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\bullet.png">
